@@ -4,7 +4,6 @@ use strict;
 use warnings;
 use FindBin qw($Bin);
 use lib ( -d "$Bin/../lib/perl5" ? "$Bin/../lib/perl5" : "$Bin/../lib" );
-use Getopt::Long;
 
 use npg_warehouse::loader;
 
@@ -23,7 +22,7 @@ warehouse_loader
 =head1 SYNOPSIS
 
 Script to load NPG, NPG QC, NPG AUTOQC and LIMs data into the npg_X tables
-of the ols sequencescape warehouse.
+of the old sequencescape warehouse.
 
 warehouse_loader [options]
 
@@ -33,7 +32,6 @@ warehouse_loader [options]
    --noverbose (a default option)
    --id_run  : load particular run, multiple runs can be specified by repeating this option
    --lims_driver_type  : an optional lims driver type
-   --run_statuses : call run status loader
 
 =head1 DESCRIPTION
 
@@ -75,7 +73,7 @@ Marina Gourtovaia
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright (C) 2017 Genome Research Ltd.
+Copyright (C) 2016,2017,2021 Genome Research Ltd.
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
