@@ -1,6 +1,8 @@
 Changes for npg_sequencescape_warehouse
 =======================================
 
+ - remove functionality for loading npg_run_status table
+
 release 43.2.4
  - Travis CI build fixes
 
